--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
