--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MQTT Broker Example",
   "main": "index.js",
   "scripts": {
-    "start": "node --require babel-register start.js",
+    "start": "node start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
